# NewTerminal

./: README.md
mobile/: pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/kotlin/com/dollarkillerx/mobile/: MainActivity.kt
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: api.dart  main.dart
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/macos/Runner/Configs/: AppInfo.xcconfig
mobile/tool/: headless_check.dart
server/: .gitignore  auth.go  go.mod  main.go  main_test.go  store.go  store_test.go
terminal/: package.json
terminal/src/: App.css  App.tsx  api.ts
terminal/src-tauri/: Cargo.toml  tauri.conf.json
terminal/src-tauri/src/: crypto.rs  lib.rs
